--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -47,7 +47,7 @@ window#waybar {
 
 #custom-menu {
   font-size: 24px;
-  background-image: url('/home/yukitty/.config/waybar/icons/menu.svg');
+  background-image: url('~/.config/waybar/icons/menu.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: 32px;
